// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImportZendeskDetail/> rendering should assert snapshot rendered with different statuses 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/import-data"
            >
              Import data
            </a>
          </li>
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            gorgias-au
             
          </li>
        </ol>
      </nav>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row mb-5"
      >
        <div
          class="col-sm-12 col-md-7 col-lg-4"
        >
          <div
            class="alert info"
          >
            <div
              class="iconContainer"
            >
              <img
                alt="icon"
                class="icon"
                src="test-file-stub"
              />
            </div>
            <div
              class="content"
            >
              <span
                class="label"
              >
                Initial import successful, continuous synchronization paused.
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row mb-4"
      >
        <div
          class="col-sm-12 col-md-7 col-lg-4"
        >
          <div
            class="md-4"
          >
            <div
              class="InputField form-group"
              color=""
            >
              <label
                class="control-label"
                for="id-domain"
              >
                Account name
              </label>
              <div
                class="input-group"
              >
                <input
                  class="form-control"
                  disabled=""
                  id="id-domain"
                  readonly=""
                  type="text"
                  value="gorgias-au"
                />
                <span
                  class="input-group-append"
                >
                  <span
                    class="input-group-text"
                  >
                    .zendesk.com
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row mb-5"
      >
        <div
          class="col-sm-12 col-md-8 col-lg-5"
        >
          <h4>
            Import summary
             
            <button
              class="btn btn-secondary"
              id="learn-button"
              type="button"
            >
              <i
                class="material-icons"
              >
                info_outline
              </i>
               
              Learn
            </button>
          </h4>
          <p>
            The past 2 weeks of ticket history is imported first. The rest is imported starting from 2 years in the past and ending when we reach the 2-week mark imported previously.
          </p>
        </div>
      </div>
      <div
        class="row no-gutters mb-5"
      >
        <div
          class="col-sm-12 col-md-8 col-lg-5"
        >
          <table
            class="table table table-hover"
          >
            <thead
              class="table-active"
            >
              <tr>
                <th>
                  Tickets
                   
                  <i
                    class="material-icons"
                    id="tickets-info"
                  >
                    info_outline
                  </i>
                </th>
                <th>
                  Macros
                </th>
                <th>
                  Customers
                </th>
                <th>
                  Users
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  100
                  <span
                    class="text-muted"
                  >
                     / 100 %
                  </span>
                </td>
                <td>
                  0
                </td>
                <td>
                  0
                </td>
                <td>
                  0
                </td>
              </tr>
            </tbody>
          </table>
          <span
            class="text-muted"
          >
            Completed on 11/27/2020 6:19 PM
          </span>
        </div>
      </div>
      <button
        class="btn btn-success"
        type="button"
      >
        <span />
        <i
          class="material-icons"
        >
          play_circle_filled
        </i>
         
        Resume
      </button>
    </div>
  </div>
</div>
`;

exports[`<ImportZendeskDetail/> rendering should assert snapshot rendered with different statuses 2`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/import-data"
            >
              Import data
            </a>
          </li>
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            gorgias-eu
             
          </li>
        </ol>
      </nav>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row mb-5"
      >
        <div
          class="col-sm-12 col-md-7 col-lg-4"
        >
          <div
            class="alert error"
          >
            <div
              class="iconContainer"
            >
              <img
                alt="icon"
                class="icon"
                src="test-file-stub"
              />
            </div>
            <div
              class="content"
            >
              <span
                class="label"
              >
                Import failed because of permissions issues.
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row mb-4"
      >
        <div
          class="col-sm-12 col-md-7 col-lg-4"
        >
          <div
            class="md-4"
          >
            <div
              class="InputField form-group"
              color=""
            >
              <label
                class="control-label"
                for="id-domain"
              >
                Account name
              </label>
              <div
                class="input-group"
              >
                <input
                  class="form-control"
                  disabled=""
                  id="id-domain"
                  readonly=""
                  type="text"
                  value="gorgias-eu"
                />
                <span
                  class="input-group-append"
                >
                  <span
                    class="input-group-text"
                  >
                    .zendesk.com
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row mb-5"
      >
        <div
          class="col-sm-12 col-md-8 col-lg-5"
        >
          <h4>
            Import summary
             
            <button
              class="btn btn-secondary"
              id="learn-button"
              type="button"
            >
              <i
                class="material-icons"
              >
                info_outline
              </i>
               
              Learn
            </button>
          </h4>
          <p>
            The past 2 weeks of ticket history is imported first. The rest is imported starting from 2 years in the past and ending when we reach the 2-week mark imported previously.
          </p>
        </div>
      </div>
      <div
        class="row no-gutters mb-5"
      >
        <div
          class="col-sm-12 col-md-8 col-lg-5"
        >
          <table
            class="table table table-hover"
          >
            <thead
              class="table-active"
            >
              <tr>
                <th>
                  Tickets
                   
                  <i
                    class="material-icons"
                    id="tickets-info"
                  >
                    info_outline
                  </i>
                </th>
                <th>
                  Macros
                </th>
                <th>
                  Customers
                </th>
                <th>
                  Users
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  100
                </td>
                <td>
                  0
                </td>
                <td>
                  0
                </td>
                <td>
                  0
                </td>
              </tr>
            </tbody>
          </table>
          <span
            class="text-muted"
          >
            Last updated on 10/27/2020 6:19 PM
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ImportZendeskDetail/> rendering should assert snapshot rendered with different statuses 3`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/import-data"
            >
              Import data
            </a>
          </li>
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            gorgias-us
             
          </li>
        </ol>
      </nav>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row mb-5"
      >
        <div
          class="col-sm-12 col-md-7 col-lg-4"
        >
          <div
            class="alert info"
          >
            <div
              class="iconContainer"
            >
              <i
                class="material-icons md-spin"
              >
                refresh
              </i>
            </div>
            <div
              class="content"
            >
              <span
                class="label"
              >
                <span>
                  Importing your Zendesk data
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row mb-4"
      >
        <div
          class="col-sm-12 col-md-7 col-lg-4"
        >
          <div
            class="md-4"
          >
            <div
              class="InputField form-group"
              color=""
            >
              <label
                class="control-label"
                for="id-domain"
              >
                Account name
              </label>
              <div
                class="input-group"
              >
                <input
                  class="form-control"
                  disabled=""
                  id="id-domain"
                  readonly=""
                  type="text"
                  value="gorgias-us"
                />
                <span
                  class="input-group-append"
                >
                  <span
                    class="input-group-text"
                  >
                    .zendesk.com
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row mb-5"
      >
        <div
          class="col-sm-12 col-md-8 col-lg-5"
        >
          <h4>
            Import summary
             
            <button
              class="btn btn-secondary"
              id="learn-button"
              type="button"
            >
              <i
                class="material-icons"
              >
                info_outline
              </i>
               
              Learn
            </button>
          </h4>
          <p>
            The past 2 weeks of ticket history is imported first. The rest is imported starting from 2 years in the past and ending when we reach the 2-week mark imported previously.
          </p>
        </div>
      </div>
      <div
        class="row no-gutters mb-5"
      >
        <div
          class="col-sm-12 col-md-8 col-lg-5"
        >
          <table
            class="table table table-hover"
          >
            <thead
              class="table-active"
            >
              <tr>
                <th>
                  Tickets
                   
                  <i
                    class="material-icons"
                    id="tickets-info"
                  >
                    info_outline
                  </i>
                </th>
                <th>
                  Macros
                </th>
                <th>
                  Customers
                </th>
                <th>
                  Users
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  100
                  <span
                    class="text-muted"
                  >
                     / 10 %
                  </span>
                </td>
                <td>
                  0
                </td>
                <td>
                  0
                </td>
                <td>
                  0
                </td>
              </tr>
            </tbody>
          </table>
          <span
            class="text-muted"
          >
            Started on 09/26/2020 6:19 PM
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
